2011-12-19  Chung-Lin Tang  <cltang@codesourcery.com>

	Backport from mainline:

	2011-12-19  Chung-Lin Tang  <cltang@codesourcery.com>

	* config/tc-mips.c (mips_pseudo_table): Add tprelword/tpreldword
	entries.
	(mips16_percent_op): Add MIPS16 TLS relocation ops.
	(md_apply_fix): Add BFD_RELOC_MIPS16_TLS_* switch cases.
	(s_tls_rel_directive): Rename from s_dtprel_internal(). Abstract out
	directive string and reloc type as function parameters. Update
	comments.
	(s_dtprelword,s_dtpreldword): Change to use s_tls_rel_directive().
	(s_tprelword,s_tpreldword): New functions.

2011-11-15  Maciej W. Rozycki  <macro@codesourcery.com>

	Apply mainline patches
	2011-11-15  Maciej W. Rozycki  <macro@codesourcery.com>
	* write.c (dump_section_relocs): Don't convert PC-relative relocs
	that have an in-place addend narrower than the addresses used.

2011-11-14  Maciej W. Rozycki  <macro@codesourcery.com>

	Apply mainline patches
	2011-11-14  Maciej W. Rozycki  <macro@codesourcery.com>
	* config/tc-mips.c (can_swap_branch_p): Exclude microMIPS
	variant frags too.

2011-11-07  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	Apply mainline patches
	2011-11-07  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
	* config/tc-arm.c (arm_cpus): Add cortex-a7 entry.
	* doc/c-arm.texi (ARM Options): Add cortex-a7 to list of accepted
	CPUs.

2011-10-25  Alan Modra  <amodra@gmail.com>

	Apply mainline patches
	2011-10-13  Alan Modra  <amodra@gmail.com>
	* as.c (main): Define .gasversion. rather than __GAS_VERSION__.
	* frags.h (bss_address_frag): Delete
	(predefined_address_frag): New.
	* frags.c (frag_init): Init predefined_address_frag.  Delete ref
	to bss_address_frag.
	* symbols.c (S_CAN_BE_REDEFINED): New function.
	* symbols.h (S_CAN_BE_REDEFINED): Declare.
	* read.c (assign_symbol): Use S_CAN_BE_REDEFINED.

	2011-10-12  Alan Modra  <amodra@gmail.com>
	* symbols.c (local_symbol_make): Make global.
	* symbols.h (local_symbol_make): Declare.