@@ -1,0 +1,8 @@
+# as: -EB
+# objdump: -sj.data
+
+.*
+
+Contents of section \.data:
+ 0000 00000001 00000000 00000002 00000004  ................
+ 0010 00000000 00000003 00000010 00000000  ................
