@@ -1,3 +1,8 @@
+2012-01-08  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* gas/mips/tls-relw.s, gas/mips/tls-relw.d: New test.
+	* gas/mips/mips.exp: Run it.
+
 2011-11-14  Maciej W. Rozycki  <macro@codesourcery.com>
 
 	Apply mainline patches
